--- a/_config.yml
+++ b/_config.yml
@@ -4,11 +4,11 @@ menu:
   Archive: /archives/
   # Tags: /tags/
   # Categories: /categories/
-  # About: /about/
+  About: /about/
 
 # Pictures shown on the sidebar
 # Use the absolute URL after generating
-# avatar: /assets/tree_small.png
+avatar: /assets/tree_small.png
 # sidebar_background: /assets/header.png
 
 rss: /atom.xml
@@ -19,7 +19,7 @@ excerpt_link: Read On »
 # Will be shown on the bottom.
 ## To add new icon, just copy .svg to source/assets/ and add entries below.
 media:
-  # github: https://github.com/nameoverflow
+  github: https://github.com/antFaiz5z
   # facebook: https://www.facebook.com/profile.php?id=100004252391322
 
 source_han_font: true
